# power-campus-api

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2fca8a8e6646_add_installments_and_payments.py  9524731a151b_initial_schema.py  a1c8e4f25b63_add_password_changed_at.py  a4b9c9a82439_slim_class_lessons_drop_duration_and_.py  a7e3c9f014b8_add_student_passport_no.py  b2f7a3c1d9e4_add_unique_tckn_index.py  b41e7c2d9a05_add_enrollment_terms_and_note.py  b8d4f1a6027c_add_classes_and_enrollment_class.py  c0d436e614a1_add_schedule_tables.py  c3a8e1f50d62_add_terms_and_enrollment_term.py  c7d2f4a81e60_add_enrollment_approval_audit.py  d8f72b7ed10c_add_invites_and_student_profile_fields.py  d9c2b7e34a15_add_student_activities.py  e1f2a3b4c5d6_add_teachers.py  e382b8da3695_add_day_windows_to_term_schedule_.py  e3a9c5f1b8d2_add_user_permissions.py  e49765c5ecaf_add_schedule_rule_templates.py  (+3 more)
app/: __init__.py  main.py  models.py  seed.py  seed_demo.py
app/core/: base.py  db.py  (+5 more)
pytest-of-selametsamli/: pytest-current
tests/: conftest.py  test_activity.py  test_auth.py  test_classes.py  test_lessons.py  test_schedule.py  test_schedule_apply.py  test_schedule_config.py  test_schedule_conflicts.py  test_schedule_generate.py  test_schedule_generator_core.py  test_schedule_generator_prefs.py  test_schedule_manual.py  test_schedule_models.py  test_schedule_settings.py  test_schedule_templates.py  test_schedule_views.py  test_students.py  test_teachers.py  test_terms.py  test_users.py
(+91 files in other folders)
